[metadata]
name = address-lookup
author = rstular
author_email = dev@rstular.eu
description = Lookup an address using an online provider
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/rstular/address-lookup
project_urls =
    Bug Tracker = https://github.com/rstular/address-lookup/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = requests

[options.packages.find]
where = src
